--- a/web/css/style.css
+++ b/web/css/style.css
@@ -5,6 +5,9 @@ a {
   color: rgb(0,159,227);
   text-decoration: none;
 }
+img{
+  margin-left: 10px;
+}
 /* Header Bar */
 .headline {
 	position: fixed;
@@ -14,15 +17,17 @@ a {
 }
 /* Header */
 .subnav {
-	padding: 8px 0px 8px 0px;
+  height: 40px;
 }
 .subnav a {
-	margin-right: 0px;
-	padding: 10px 10px 10px 10px;
-	font-size: 1.1em;
-	text-transform: uppercase;
-	font-family: montserrat, sans-serif;
-	color: rgb(218,218,218);
+  font-size: 1.1em;
+  text-transform: uppercase;
+  font-family: montserrat, sans-serif;
+  /* color: rgb(218,218,218); */
+  width: 200px;
+  display: block;
+  line-height: 40px;
+  text-align: center;
 }
 .subnav a:hover {
 	color: rgb(0,159,227);
@@ -38,9 +43,11 @@ a {
 
 /* Doc */
 .pagemenu{
-  padding: 50px;
+  padding-top: 50px;
+  padding-right: 0px;
   padding-left: 10px;
-	border-right: 1px solid#dbdde2;
+	border-right: 1px solid #dbdde2;
+  overflow-y: auto;
 }
 .pageSelect{
 	color: rgb(0,159,227) !important;
@@ -61,6 +68,7 @@ a.mainMenuItem{
   padding: 60px;
 	float: left;
   border-right: solid 1px #dfe2e7;
+  overflow-y: auto;
 }
 .pushContent {
 	float: left;
@@ -87,15 +95,18 @@ a.mainMenuItem{
 }
 @media (min-width:640px) and (max-width:959px) {
   .pagemenu {
-    width: 150px;
+    width: 190px;
     float: left;
+    padding-left: 10px;
   }
   .menubar{
+    margin-left: -1px;
     position: relative;
     width: 200px;
     float: left;
     border-right: 0px solid #dbdde2;
-    padding: 55px 0px 0px 20px;
+    border-left: 1px solid #dbdde2;
+    padding: 50px 0px 0px 10px;
   }
   .pushContent {
     border-top: 1px solid #dbdde2;
@@ -109,24 +120,26 @@ a.mainMenuItem{
 @media (min-width:960px) and (max-width: 1179px) {
   .pagemenu {
     position: fixed;
-    width: 150px;
+    width: 190px;
     float: left;
     left:0px;
     height: 100vh;
     border-right: 1px solid #dbdde2;
   }
   .menubar{
+    margin-left: -1px;
     position: fixed;
-    width: 150px;
-    left: 212px;
-    height: 100vh;
+    width: 190px;
+    left: 200px;
+    height: calc(100% - 50px);
     float: left;
-    border-right: 1px solid#dbdde2;
-    padding: 55px 10px 10px 20px;
+    border-right: 1px solid #dbdde2;
+    padding: 50px 0px 0px 10px;
+    overflow-y: auto;
   }
   .pushContent {
     padding-left: 0px;
-    left:400px;
+    left: 400px;
     top: 25px;
   }
   .content {
@@ -139,7 +152,7 @@ a.mainMenuItem{
     }
    .pagemenu {
      position: fixed;
-     width: 150px;
+     width: 190px;
      float: left;
      left:0px;
      height: 100vh;
@@ -148,28 +161,32 @@ a.mainMenuItem{
    }
    .menubar{
      position: fixed;
-     width: 150px;
-     left: 212px;
-     height: 100vh;
+     width: 190px;
+     left: 200px;
+     height: calc(100% - 50px);
      float: left;
-     border-right: 1px solid#dbdde2;
-     padding: 55px 10px 10px 20px;
+     border-left: 1px solid #dbdde2;
+     border-right: 0px solid #dbdde2;
+     padding: 50px 0px 0px 10px;
+     overflow-y: auto;
      background-color: #FFFFFF;
    }
    .pushContent {
      padding-left: 0px;
-     left:394px;
+     left:401px;
      top: 25px;
-     width: 550px;
+     width: 600px;
+     border-left: 1px solid #dbdde2;
+     border-right: 1px solid #dbdde2;
      background-color: #FFFFFF;
+     height: 100vh;
    }
    .content {
-     width: 530px;
-     border-right: 1px solid#dbdde2;
+     width: 540px;
      background-color: #FFFFFF;
    }
    p {
-     width: 530px !important;
+     width: 540px !important;
      padding: 10px;
    }
    .img-js {
@@ -187,9 +204,16 @@ a.mainMenuItem{
 .content h1, .content h2, .content .big-heading, body.big-h3 .content h3 {
   padding-top: 30px;
 }
+.content h3 {
+    border-bottom: solid 1px rgba(0,0,0,0.07);
+}
+.content p {
+  padding: 3px 0;
+}
 .content-img img {
-	max-width: 350px;
-	height:auto;
+  max-width: 350px;
+  height: auto;
+  max-height: 250px;
 }
 .level-1{
 	font-family: montserrat, sans-serif;
